mobile/phonegap version fixes

--- a/source/sass/_player.sass
+++ b/source/sass/_player.sass
@@ -4,8 +4,8 @@
 	width: 20px
 	height: 20px
 	position: relative
-	left: 300px
-	top: 300px
+	left: 80px
+	top: 80px
 	background: url(../img/player-down.png) no-repeat
 	background-size: contain !important
  
